--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,7 @@ rand = "0.6.5"
 tokio-threadpool = "0.1.17"
 futures = "0.1.19"
 structopt = "0.3"
+new_futures = { package = "futures", version = "0.3.1" }
+tokio = { version = "0.2.6", features = ["full"] }
+kube_async = { package = "kube", version = "0.23.0", features = ["openapi"] }
+k8s-openapi = { version = "0.6.0", default-features = false, features = ["v1_15"] }
