--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ new_futures = { package = "futures", version = "0.3.1" }
 tokio = { version = "0.2.6", features = ["full"] }
 kube_async = { package = "kube", version = "0.23.0", features = ["openapi"] }
 k8s-openapi = { version = "0.6.0", default-features = false, features = ["v1_15"] }
+once_cell = "1.3.1"
