--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ tokio = { version = "0.2.6", features = ["full"] }
 kube_async = { package = "kube", git = "https://github.com/ericmcbride/kube-rs", branch = "master", features=["openapi"] }
 k8s-openapi = { version = "0.7.1", default-features = false, features = ["v1_15"] }
 once_cell = "1.3.1"
+serde_json = "1.0"
